--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "name": "Yennifer Herrera",
     "github": "Yenniferh"
   },
+  "homepage": "https://Yenniferh.github.io/Crypto-Rock-Paper-Scissors/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -37,6 +38,8 @@
     "web3": "^1.6.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
@@ -62,6 +65,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
+    "gh-pages": "^3.2.3",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23"
   }
